# VISU-X

./: .Agent.py  .gitignore  DB.py  README.md  STT.py  TTS.py  VISU.py  app.py  emotion.py  face_emotion.txt  face_tracker.py  hello.py  live_capture.py  main.py  pi_serial.py  prompt.txt  pyproject.toml  server.py  server_test.py  settings.py  terminal.py  test.py  user_id.txt  websocket_server.py
archive/: live_capture.py  live_capture_dai.py
db/: ds_model_facenet512_detector_opencv_aligned_normalization_base_expand_0.pkl  ds_model_vggface_detector_opencv_aligned_normalization_base_expand_0.pkl
prompts/: face_emotion.txt  prompt.txt
static/: index.js
templates/: index.html
