[project]
name = "visu-x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepface>=0.0.93",
    "deepgram-sdk>=3.11.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.1.3",
    "pydantic-settings>=2.9.1",
    "setuptools>=79.0.0",
    "supabase>=2.15.0",
    "tf-keras>=2.19.0",
    "webrtcvad>=2.0.10",
]
